# citadel-tools

./: .gitignore  Cargo.toml
citadel-desktopd/: Cargo.toml
citadel-desktopd/src/: config.rs  desktop.rs  desktop_file_sync.rs  main.rs  monitor.rs  parser.rs
citadel-image/: Cargo.toml
citadel-image/src/: build.rs  config.rs  main.rs
citadel-install/: Cargo.toml
citadel-install/src/: cli.rs  disks.rs  installer.rs  main.rs  util.rs
citadel-mkimage/: Cargo.toml
citadel-mkimage/src/: build.rs  config.rs  main.rs  util.rs
citadel-mount/: Cargo.toml
citadel-mount/src/: boot_select.rs  main.rs  rootfs.rs  uname.rs
citadel-realms/: Cargo.toml
citadel-realms/src/: appimg.rs  backend.rs  config.rs  dialogs.rs  help.rs  item_list.rs  logview.rs  main.rs  manager.rs  network.rs  notes.rs  realm.rs  systemd.rs  terminal.rs  theme.rs  ui.rs  util.rs
citadel-realms/src/realm/: actions.rs  config_realm.rs  delete_realm.rs  mod.rs  new_realm.rs
citadel-realms/src/realmfs/: actions.rs  fork_dialog.rs  mod.rs
citadel-realms/src/tree/: mod.rs  tree_list.rs
citadel-tool/: Cargo.toml
citadel-tool/src/: main.rs
citadel-tool/src/boot/: disks.rs  live.rs  mod.rs  rootfs.rs
citadel-tool/src/image/: mod.rs
citadel-tool/src/install/: cli.rs  disk.rs  installer.rs  mod.rs
citadel-tool/src/mkimage/: build.rs  mod.rs
citadel-tool/src/realmfs/: mod.rs
citadel-tool/src/sync/: desktop_file.rs  icon_cache.rs  icons.rs  mod.rs  parser.rs  sync.rs
libcitadel/: Cargo.toml
libcitadel/src/: blockdev.rs  cmdline.rs  config.rs  disks.rs  exec.rs  header.rs  keyring.rs  keys.rs  lib.rs  log.rs  mount.rs  partition.rs  path_ext.rs  realmfs.rs  resource.rs  symlink.rs  util.rs  verity.rs
libcitadel/src/realm/: config.rs  create.rs  events.rs  manager.rs  mod.rs  network.rs  overlay.rs  realm.rs  realms.rs  systemd.rs
libcitadel/src/realmfs/: activator.rs  mod.rs  mountpoint.rs  realmfs.rs  realmfs_set.rs  resizer.rs  update.rs
libcitadel/src/system/: lock.rs  loopdev.rs  mod.rs  mounts.rs  uname.rs
libcitadel/src/terminal/: ansi.rs  base16.rs  base16_shell.rs  color.rs  mod.rs  raw.rs
src/: main.rs  util.rs
systemd/: citadel-current-watcher.path  citadel-current-watcher.service  citadel-desktop-watcher.path  citadel-desktop-watcher.service
