[package]
name = "citadel-image"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
homepage = "https://github.com/subgraph/citadel"
edition = "2018"

[dependencies]
libcitadel = { path = "../libcitadel" }
clap = "2.32.0"
failure = "0.1.3"
serde_derive = "1.0.82"
serde = "1.0.82"
toml = "0.4.10"
