[package]
name = "citadel-realms"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
homepage = "http://github.com/subgraph/citadel"
edition = "2018"


[dependencies]
libcitadel = { path = "../libcitadel" }
libc = "0.2"
failure = "0.1.1"
termion = "1.5.1"
signal-hook = "0.1.7"

[dependencies.cursive]
version = "=0.11.0"
default-features = false
features = [ "termion-backend" ]

[dependencies.crossbeam-channel]
version = "0.3"
