[package]
name = "citadel-tool"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"

[dependencies]
libcitadel = { path = "../libcitadel" }
failure = "0.1"
rpassword = "2.1.0"
clap = "2.32.0"
lazy_static = "1.2.0"
serde_derive = "1.0.82"
serde = "1.0.82"
toml = "0.4.10"
hex = "0.3.2"
byteorder = "1"

