[package]
name = "libcitadel"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]

[dependencies]
libc = "0.2"
nix = "0.12.0"
failure = "0.1.3"
ed25519-dalek = "0.8.1"
sha2 = "0.7.0"
rand = "0.6"
toml = "0.4.10"
serde = "1.0.82"
serde_derive = "1.0.82"
rustc-serialize = "0.3.24"
lazy_static = "1.2.0"

