[package]
name = "libcitadel"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.12.0"
ring = "0.13.5"
untrusted = "0.6.2"
failure = "0.1.3"
toml = "0.4.10"
serde = "1.0.82"
serde_derive = "1.0.82"
rustc-serialize = "0.3.24"
lazy_static = "1.2.0"

