[package]
name = "libcitadel"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.12.0"
failure = "0.1.3"
toml = "0.4.10"
serde = "1.0.82"
serde_derive = "1.0.82"
lazy_static = "1.2.0"
sodiumoxide = "0.2.0"
hex = "0.3.2"
byteorder = "1"
bincode = "=1.0.1"
walkdir = "2"
dbus = "0.6"

[dependencies.inotify]
version = "0.7"
default-features = false
features = []
